--- a/templates/events/home.html
+++ b/templates/events/home.html
@@ -1,7 +1,23 @@
 {% extends 'events/base.html' %}
 
 {% block content %}
-    <h1>Welcome home, django dude!</h1>
-    <p>Year: {{ year }}, month: {{ month }} ({{ month_number }}).</p>
-    <p>{{ clndr|safe }}</p>
+    <div class="row g-5">
+        <div class="col-md-8">
+            <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top:  16px;">
+                <h3>Welcome home, django dude!</h3>
+                <p>Year: {{ year }}, month: {{ month }} ({{ month_number }}).</p>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="position-sticky" style="top: 5rem;">
+                <div class="p-4 mb-3 bg-light rounded">
+                    <h4 class="fst-italic">Calendar</h4>
+                    <p class="mb-0">
+                        {{ clndr|safe }}
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
