--- a/templates/events/base.html
+++ b/templates/events/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>django-website</title>
+        <title>&#128467; Django Events</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <style>
             h1, h2, h3, h4, h5, h6 {
@@ -14,16 +14,15 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}">Django website</a>
+                <a class="navbar-brand" href="{% url 'home' %}">&#128467; Django Events</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="{% url 'all_events' %}">Events</a>
                         <a class="nav-link" href="{% url 'home' '2021' 'March' %}">March 2021</a>
-                        <a class="nav-link disabled">Disabled</a>
                     </div>
                 </div>
             </div>
@@ -39,6 +38,8 @@
                 </ul>
                 <ul class="nav col-md-4 justify-content-end">
                     <li class="nav-item"><a href="{% url 'home' %}" class="nav-link px-2 text-muted">Home</a></li>
+                    <li class="nav-item"><a href="{% url 'all_events' %}" class="nav-link px-2 text-muted">Events</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
                 </ul>
             </footer>
         </div>
