Lesson #7 done - 'Add venue' form implemented.

--- a/templates/events/base.html
+++ b/templates/events/base.html
@@ -22,7 +22,9 @@
                     <div class="navbar-nav">
                         <a class="nav-link" href="{% url 'all_venues' %}">Places</a>
                         <a class="nav-link" href="{% url 'all_events' %}">Events</a>
+                        <a class="nav-link" href="{% url 'add_venue' %}">Add Venue</a>
                         <a class="nav-link" href="#">Favorites</a>
+                        <a class="nav-link" href="/admin/">Admin</a>
                         <a class="nav-link" href="{% url 'home' '2021' 'March' %}">March 2021</a>
                     </div>
                 </div>
