Lesson #8 done - single venue detailed view. CSS-styled tags added.

--- a/templates/events/all_venues.html
+++ b/templates/events/all_venues.html
@@ -22,10 +22,9 @@
                                 </p>
                             {% endif %}
                             <p class="card-text">
-                                {{ venue.description }}
+                                {{ venue.description }}<br/>
+                                <a href="{% url 'show_venue' venue.id %}">Details...</a>
                             </p>
-                            {{ venue.yandex_map_widget|safe }}
-                            {{ venue.yandex_reviews_widget|safe }}
                         </div>
                     </div>
                     <br/>
