--- a/templates/events/show_venue.html
+++ b/templates/events/show_venue.html
@@ -1,4 +1,5 @@
 {% extends 'events/base.html' %}
+{% block title %}{{ venue.name }}{% endblock %}
 
 {% block content %}
     <div class="row g-5">
@@ -8,17 +9,7 @@
                 <p>
                     [ <a href="#">Visited</a> | <a href="#">Add to list</a> | <a href="#">Something else</a> ]
                 </p>
-                {% if venue.tags.all %}
-                <p>
-                    <div class="tags small">
-                    <!-- &#x1F3F7; -->
-                    {% for tag in venue.tags.all %}
-                        <a title="{{ tag.name }}" href="#"
-                           class="color2">{{ tag.name }}</a>
-                    {% endfor %}
-                    </div>
-                </p>
-                {% endif %}
+                {% include 'snippets/venue_tags.html' with venue=venue %}
                 <p>
                     <b>City:</b> {{ venue.city }}<br/>
                     <b>Location:</b> {{ venue.address }}<br/>
@@ -86,12 +77,7 @@
                 <div class="p-4 mb-3 bg-light rounded">
                     <h4 class="fst-italic">All tags</h4>
                     <p class="mb-0">
-                        <div class="tags">
-                        {% for tag in tags %}
-                            <a title="{{ tag.name }}" href="#"
-                               class="color5">{{ tag.name }}</a>
-                        {% endfor %}
-                        </div>
+                        {% include 'snippets/show_all_tags.html' with tags=tags %}
                     </p>
                 </div>
             </div>
