--- a/templates/events/show_venue.html
+++ b/templates/events/show_venue.html
@@ -7,7 +7,8 @@
             <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top:  16px;">
                 <h3>{{ venue.name }}</h3>
                 <p>
-                    [ <a href="#">Visited</a> | <a href="#">Add to list</a> | <a href="#">Something else</a> ]
+                    [ <a href="#">Visited</a> | <a href="#">Add to list</a> |
+                    <a href="{% url 'edit_venue' venue.id %}">Edit venue</a> | Share ]
                 </p>
                 {% include 'snippets/venue_tags.html' with venue=venue %}
                 <p>
