--- a/templates/events/base.html
+++ b/templates/events/base.html
@@ -113,11 +113,11 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" href="{% url 'all_venues' %}">Places</a>
-                        <a class="nav-link" href="{% url 'all_events' %}">Events</a>
                         <a class="nav-link" href="{% url 'add_venue' %}">Add Venue</a>
+                        <a class="nav-link" href="{% url 'all_events' %}">Events</a>
+                        <a class="nav-link" href="{% url 'add_event' %}">Add Event</a>
                         <a class="nav-link" href="#">Favorites</a>
                         <a class="nav-link" href="/admin/">Admin</a>
-                        <a class="nav-link" href="{% url 'home' '2021' 'March' %}">March 2021</a>
                     </div>
                 </div>
                 <form class="d-flex" role="search" method="post" action="{% url 'search_venues' %}">
