--- a/templates/events/all_venues.html
+++ b/templates/events/all_venues.html
@@ -7,6 +7,9 @@
             <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top:  16px;">
                 <h3>All places</h3>
                 <p>
+                    <a href="{% url 'all_venues_text' %}" class="btn btn-primary">Download as file</a>
+                </p>
+                <p>
                     {% for venue in venue_list %}
                         {% include 'snippets/venue_card.html' with venue=venue %}
                         <br/>
