Lesson #17 done - dynamic PDF file generation for download.

--- a/templates/events/all_venues.html
+++ b/templates/events/all_venues.html
@@ -9,6 +9,7 @@
                 <p>
                     <a href="{% url 'all_venues_text' %}" class="btn btn-primary">Download TXT</a>
                     <a href="{% url 'all_venues_csv' %}" class="btn btn-primary">Download CSV</a>
+                    <a href="{% url 'all_venues_pdf' %}" class="btn btn-primary">Download PDF</a>
                 </p>
                 <p>
                     {% for venue in venue_list %}
