--- a/templates/events/all_venues.html
+++ b/templates/events/all_venues.html
@@ -17,16 +17,37 @@
                         <br/>
                     {% endfor %}
                 </p>
-                <p>
-                    {% if page_venues.has_previous %}
-                        <a href="?page={{ page_venues.previous_page_number }}" class="btn btn-secondary">&blacktriangleleft;&nbsp;Prev</a>
-                    {% endif %}
-                    {% if page_venues.has_next %}
-                        <a href="?page={{ page_venues.next_page_number }}" class="btn btn-secondary">Next&nbsp;&blacktriangleright;</a>
-                    {% endif %}
-                <br/>
-                    {{ page_venues }}<br/>
-                </p>
+                <nav aria-label="Page navigation">
+                    <ul class="pagination">
+                        {% if not page_venues.has_previous %}
+                            <li class="page-item disabled">
+                                <a class="page-link">Previous</a>
+                            </li>
+                        {% else %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_venues.previous_page_number }}">Previous</a>
+                            </li>
+                        {% endif %}
+                        {% for num in page_nums %}
+                            <li class="page-item">
+                                {% if num != page_venues.number %}
+                                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                                {% else %}
+                                    <a class="page-link disabled">{{ num }}</a>
+                                {% endif %}
+                            </li>
+                        {% endfor %}
+                        {% if not page_venues.has_next %}
+                            <li class="page-item disabled">
+                                <a class="page-link">Next</a>
+                            </li>
+                        {% else %}
+                            <li class="page-item">
+                                <a class="page-link" href="?page={{ page_venues.next_page_number }}">Next</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
             </div>
         </div>
 
