--- a/templates/events/base.html
+++ b/templates/events/base.html
@@ -116,8 +116,12 @@
                         <a class="nav-link" href="{% url 'add_venue' %}">Add Venue</a>
                         <a class="nav-link" href="{% url 'all_events' %}">Events</a>
                         <a class="nav-link" href="{% url 'add_event' %}">Add Event</a>
-                        <a class="nav-link" href="/admin/">Admin</a>
-                        <a class="nav-link" href="{% url 'login_user' %}">Login</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-link" href="/admin/">Admin</a>
+                            <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
+                        {% else %}
+                            <a class="nav-link" href="{% url 'login_user' %}">Login</a>
+                        {% endif %}
                     </div>
                 </div>
                 <form class="d-flex" role="search" method="post" action="{% url 'search_venues' %}">
