--- a/templates/events/base.html
+++ b/templates/events/base.html
@@ -96,14 +96,17 @@
                 top: 0;
                 border-width: 11px 0 11px 11px;
             }
+
+            /* Palette: #622569 #b8a9c9 #d6d4e0 #5b9aa0 */
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top"
+            style="background: #622569; border-bottom: solid #b8a9c9 5px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'home' %}"
                 style="font-family: 'Playfair Display', Georgia, 'Times New Roman', serif; font-style: italic;">
-                    &#128467; Django Events
+                    Django Events
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -113,13 +116,18 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" href="{% url 'all_venues' %}">Places</a>
-                        <a class="nav-link" href="{% url 'add_venue' %}">Add Venue</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'add_venue' %}">Add Venue</a>
+                        {% endif %}
                         <a class="nav-link" href="{% url 'all_events' %}">Events</a>
-                        <a class="nav-link" href="{% url 'add_event' %}">Add Event</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'add_event' %}">Add Event</a>
+                        {% endif %}
                         {% if user.is_authenticated %}
                             <a class="nav-link" href="/admin/">Admin</a>
                             <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
                         {% else %}
+                            <a class="nav-link" href="{% url 'signup_user' %}">Sign Up</a>
                             <a class="nav-link" href="{% url 'login_user' %}">Login</a>
                         {% endif %}
                     </div>
