--- a/templates/events/add_event.html
+++ b/templates/events/add_event.html
@@ -5,17 +5,21 @@
         <div class="col-md-8">
             <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top:  16px;">
                 <h3>Add Event</h3>
-                <p>
-                {% if submitted %}
-                    Your event was successfully added.
+                {% if user.is_authenticated %}
+                    <p>
+                    {% if submitted %}
+                        Your event was successfully added.
+                    {% else %}
+                        <form action="" method="post">
+                            {%  csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit"  value="Submit" class="btn btn-primary">
+                        </form>
+                    {% endif %}
+                    </p>
                 {% else %}
-                    <form action="" method="post">
-                        {%  csrf_token %}
-                        {{ form.as_p }}
-                        <input type="submit"  value="Submit" class="btn btn-primary">
-                    </form>
+                    <p>You must be logged in for this action.</p>
                 {% endif %}
-                </p>
             </div>
         </div>
 
