--- a/templates/events/all_events.html
+++ b/templates/events/all_events.html
@@ -23,8 +23,10 @@
                                 {% endfor %}
                             </p>
                             <a href="{{ event.venue.website }}" class="btn btn-primary">Сайт {{ event.venue.name }}</a>
-                            <a href="{% url 'edit_event' event.id %}" class="btn btn-primary">Edit event</a>
-                            <a href="{% url 'delete_event' event.id %}" class="btn btn-danger">Delete event</a>
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'edit_event' event.id %}" class="btn btn-primary">Edit event</a>
+                                <a href="{% url 'delete_event' event.id %}" class="btn btn-danger">Delete event</a>
+                            {% endif %}
                         </div>
                     </div>
                     <br/>
