--- a/templates/snippets/venue_card.html
+++ b/templates/snippets/venue_card.html
@@ -9,7 +9,9 @@
             {{ venue.description }}<br/>
             <br/>
             <a href="{% url 'show_venue' venue.id %}" class="btn btn-primary">Details...</a>
-            <a href="{% url 'delete_venue' venue.id %}" class="btn btn-danger">Delete venue</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'delete_venue' venue.id %}" class="btn btn-danger">Delete venue</a>
+            {% endif %}
         </p>
     </div>
 </div>
