--- a/templates/authenticate/profile.html
+++ b/templates/authenticate/profile.html
@@ -15,6 +15,10 @@
                     {% endfor %}
                 {% endif %}
 
+                {{ user }}<br/>
+                {{ user.first_name }} {{ user.last_name }}<br/>
+                {{ user.email }}
+
             </div>
         </div>
 
