--- a/templates/events/base.html
+++ b/templates/events/base.html
@@ -124,6 +124,7 @@
                             <a class="nav-link" href="{% url 'add_event' %}">Add Event</a>
                         {% endif %}
                         {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'user_profile' %}">Profile</a>
                             <a class="nav-link" href="/admin/">Admin</a>
                             <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
                         {% else %}
