--- a/templates/events/base.html
+++ b/templates/events/base.html
@@ -125,7 +125,9 @@
                         {% endif %}
                         {% if user.is_authenticated %}
                             <a class="nav-link" href="{% url 'user_profile' %}">Profile</a>
+                            {%  if user.is_superuser %}
                             <a class="nav-link" href="/admin/">Admin</a>
+                            {% endif %}
                             <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
                         {% else %}
                             <a class="nav-link" href="{% url 'signup_user' %}">Sign Up</a>
