Lesson #38 done – now we can add images to new venues. Migration made!

--- a/templates/events/add_venue.html
+++ b/templates/events/add_venue.html
@@ -10,7 +10,7 @@
                     {% if submitted %}
                         Your venue was successfully added.
                     {% else %}
-                        <form action="" method="post">
+                        <form action="" method="post" enctype="multipart/form-data">
                             {%  csrf_token %}
                             {{ form.as_p }}
                             <input type="submit"  value="Submit" class="btn btn-primary">
