--- a/templates/events/show_venue.html
+++ b/templates/events/show_venue.html
@@ -13,6 +13,10 @@
                     {% endif %}
                     Share ]
                 </p>
+                {% if venue.venue_image %}
+                    <img src="{{ venue.venue_image.url }}" width="90%">
+                {% endif %}
+
                 {% include 'snippets/venue_tags.html' with venue=venue %}
                 <p>
                     <b>City:</b> {{ venue.city }}<br/>
