--- a/templates/events/edit_venue.html
+++ b/templates/events/edit_venue.html
@@ -7,7 +7,7 @@
             <div class="shadow-lg p-3 mb-5 bg-body rounded" style="margin-top:  16px;">
                 <h3>Edit venue – {{ venue.name }}</h3>
                 {% if user.is_authenticated %}
-                <form action="{% url 'edit_venue' venue.id %}" method="post">
+                <form action="{% url 'edit_venue' venue.id %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
                     <input type="submit"  value="Submit" class="btn btn-primary">
