Lesson #40 done – added 'calculated field' to Event model - days_until(). Powerful stuff!

--- a/templates/events/all_events.html
+++ b/templates/events/all_events.html
@@ -15,6 +15,7 @@
                             <h5 class="card-title">{{ event.name }}</h5>
                             <p class="card-text">
                                 <b>Date:</b> {{ event.event_date }}<br/>
+                                <b>Days till event:</b> {{ event.days_until }}<br/>
                                 <b>Manager:</b> {{ event.manager }}<br/>
                                 {{ event.description }}<br/>
                                 <b>Attendees:</b>
